--- a/force-app/main/default/classes/GmailIntegrationController.cls
+++ b/force-app/main/default/classes/GmailIntegrationController.cls
@@ -1,5 +1,15 @@
 public with sharing class GmailIntegrationController {
-    public GmailIntegrationController() {
-
+    @AuraEnabled(cacheable=true)
+    public static string GmailIntegration(Id ContactId){
+        try {
+            Contact con = [SELECT Email FROM Contact WHERE ID =: contactId LIMIT 1];
+            System.debug(con);
+            return 'Success';
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
     }
 }
+
+
+
